# agentic-video-editor

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.claude/: launch.json
.claude/policies/: broll-duration-accounting.md  ffmpeg-overlay-pts-timing.md  uvicorn-reload-wipes-state.md
pipelines/: ugc-ad.yaml
src/: main.py
src/agents/: director.py  editor.py  reviewer.py  trim_refiner.py
src/models/: schemas.py
src/pipeline/: preprocess.py  runner.py
src/tools/: analyze.py  captions.py  edit.py  render.py
src/web/: app.py  jobs.py
src/web/routes/: __init__.py  browse.py  clips.py  config.py  feedback.py  footage.py  jobs.py  projects.py  render.py  ws.py
src/web/static/: index.html  styles.css
src/web/static/js/: brief-builder.js  chat.js  edit-controls.js  progress.js  re-render.js  review-chart.js  shot-browser.js  timeline.js  video-player.js
src/web/studio/: README.md  next.config.ts  package.json  pnpm-lock.yaml
src/web/studio/src/app/: globals.css  layout.tsx  page.tsx
src/web/studio/src/components/: ChatPanel.tsx  Console.tsx  FolderPicker.tsx  MediaBrowser.tsx  ProgramMonitor.tsx  SourceMonitor.tsx  Toolbar.tsx
src/web/studio/src/hooks/: useJobStream.ts
src/web/studio/src/lib/: api.ts  media.ts
src/web/studio/src/stores/: jobStore.ts  mediaStore.ts  projectStore.ts  timelineStore.ts  uiStore.ts
styles/: dtc-testimonial.yaml
tests/: test_captions.py  test_web_clips.py  test_web_feedback.py  test_web_footage.py  test_web_jobs.py  test_web_jobs_review.py  test_web_render.py  test_web_ws.py
(+10 files in other folders)
